fixing spacing, video

--- a/Assets/styles/head_foot.css
+++ b/Assets/styles/head_foot.css
@@ -1,11 +1,14 @@
-@font-face {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap');
+
+/* @font-face {
   font-family: 'Montserrat';
   src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400;1,500&display=swap"');
 }
 @font-face {
   font-family: 'Roboto Slab';
   src: url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap');
-}
+} */
 /* body {
   border-radius: 1em;
   border: 0.2em solid black;
